@@ -27,6 +27,7 @@
     * FIX: Fix output format python for several numeric columns
     * FIX: Fixed searching hosts by aliases/adresses
     * FIX: Remove duplicate entries from Quicksearch
+    * FIX: Avoid timed browser reload after execution of exections
 
     BI:
     * FIX: Fix exception when showing BI tree in reporting time warp
